force-app/main/default/objects/Case/fields/Billing_Start_Supplier__c.field-meta.xml
<CustomField>
    <fullName>Billing_Start_Supplier__c</fullName>
    <label>Billing Start (Supplier)</label>
    <type>Date</type>
</CustomField>