force-app/main/default/objects/Case/fields/Cease_Circuit_Reference__c.field-meta.xml
<CustomField>
    <fullName>Cease_Circuit_Reference__c</fullName>
    <label>Cease Circuit Reference</label>
    <length>30</length>
    <type>Text</type>
</CustomField>