force-app/main/default/objects/Case/fields/Contract_Status__c.field-meta.xml
<CustomField>
    <fullName>Contract_Status__c</fullName>
    <label>Contract Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Contract Sent</fullName>
            </value>
            <value>
                <fullName>Contract Signed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>