force-app/main/default/objects/Case/fields/CRF_Status__c.field-meta.xml
<CustomField>
    <fullName>CRF_Status__c</fullName>
    <label>CRF Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Required: Sent</fullName>
            </value>
            <value>
                <fullName>Required: Completed</fullName>
            </value>
            <value>
                <fullName>Not Required</fullName>
            </value>
            <value>
                <fullName>Problem with Fields: General</fullName>
            </value>
            <value>
                <fullName>Problem with Fields: Installation &amp; Location Issue</fullName>
            </value>
            <value>
                <fullName>Problem with Fields: Installation Location Hazard Issue</fullName>
            </value>
            <value>
                <fullName>Problem with Fields: Landlord/Wayleave Detail Issue</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>