force-app/main/default/objects/Case/fields/Direct_Debit__c.field-meta.xml
<CustomField>
    <fullName>Direct_Debit__c</fullName>
    <label>Direct Debit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Existing Customer/Not Required</fullName>
            </value>
            <value>
                <fullName>Required: Requested</fullName>
            </value>
            <value>
                <fullName>Required: Set-Up</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>