force-app/main/default/objects/Case/fields/ECC_s_Amount__c.field-meta.xml
<CustomField>
    <fullName>ECC_s_Amount__c</fullName>
    <label>ECC&apos;s Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>