force-app/main/default/objects/Case/fields/ECC_s_Required__c.field-meta.xml
<CustomField>
    <fullName>ECC_s_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ECC&apos;s Required</label>
    <type>Checkbox</type>
</CustomField>