force-app/main/default/objects/Case/fields/Escalation_level__c.field-meta.xml
<CustomField>
    <fullName>Escalation_level__c</fullName>
    <label>Escalation level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BAU</fullName>
            </value>
            <value>
                <fullName>L1</fullName>
            </value>
            <value>
                <fullName>L2</fullName>
            </value>
            <value>
                <fullName>L3</fullName>
            </value>
            <value>
                <fullName>L4</fullName>
            </value>
            <value>
                <fullName>DSO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>