force-app/main/default/objects/Case/fields/GN_Provisioning_Status__c.field-meta.xml
<CustomField>
    <fullName>GN_Provisioning_Status__c</fullName>
    <label>GN Provisioning Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0.0 - Contract sent</fullName>
                <label>0.0 - Pre-Provisioning</label>
            </value>
            <value>
                <fullName>1.6 - Cancellation</fullName>
            </value>
            <value>
                <fullName>1.8 - Waiting to be placed</fullName>
            </value>
            <value>
                <fullName>2.0 - Ordered with supplier</fullName>
            </value>
            <value>
                <fullName>2.1 - Planning</fullName>
            </value>
            <value>
                <fullName>2.2 - Survey</fullName>
            </value>
            <value>
                <fullName>2.3 - ECC/TRC Approval</fullName>
            </value>
            <value>
                <fullName>2.4 - Wayleave Approval</fullName>
            </value>
            <value>
                <fullName>2.5 - Delay</fullName>
            </value>
            <value>
                <fullName>3.0 - Build</fullName>
            </value>
            <value>
                <fullName>3.1 - Fit &amp; Test</fullName>
            </value>
            <value>
                <fullName>4.0 - Build Complete</fullName>
            </value>
            <value>
                <fullName>4.1 - Billing Complete</fullName>
            </value>
            <value>
                <fullName>4.2 - Job Complete</fullName>
            </value>
            <value>
                <fullName>1.0 - New Order</fullName>
                <isActive>false</isActive>
                <label>1.0 - New Order</label>
            </value>
            <value>
                <fullName>1.1 - Credit Check</fullName>
                <isActive>false</isActive>
                <label>1.1 - Credit Check</label>
            </value>
            <value>
                <fullName>1.2 - CRF</fullName>
                <isActive>false</isActive>
                <label>1.2 - CRF</label>
            </value>
            <value>
                <fullName>1.3 - Direct Debit/Payment terms</fullName>
                <isActive>false</isActive>
                <label>1.3 - Direct Debit/Payment terms</label>
            </value>
            <value>
                <fullName>1.4 - DCMS Voucher</fullName>
                <isActive>false</isActive>
                <label>1.4 - DCMS Voucher</label>
            </value>
            <value>
                <fullName>1.5 - Delay</fullName>
                <isActive>false</isActive>
                <label>1.5 - Delay</label>
            </value>
            <value>
                <fullName>1.7 - Delay COVID</fullName>
                <isActive>false</isActive>
                <label>1.7 - Delay COVID</label>
            </value>
            <value>
                <fullName>2.6 - Delay Covid</fullName>
                <isActive>false</isActive>
                <label>2.6 - Delay Covid</label>
            </value>
            <value>
                <fullName>3.2 - Delay</fullName>
                <isActive>false</isActive>
                <label>3.2 - Delay</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>