force-app/main/default/objects/Case/fields/Handover_Date_Customer__c.field-meta.xml
<CustomField>
    <fullName>Handover_Date_Customer__c</fullName>
    <label>Handover Date - (Customer)</label>
    <type>Date</type>
</CustomField>