force-app/main/default/objects/Case/fields/Handover_Date_from_Sales__c.field-meta.xml
<CustomField>
    <fullName>Handover_Date_from_Sales__c</fullName>
    <label>Handover Date from Sales</label>
    <type>Date</type>
</CustomField>