force-app/main/default/objects/Case/fields/Handover_Date_supplier__c.field-meta.xml
<CustomField>
    <fullName>Handover_Date_supplier__c</fullName>
    <label>Handover Date (supplier)</label>
    <type>Date</type>
</CustomField>