force-app/main/default/objects/Case/fields/Install_Date__c.field-meta.xml
<CustomField>
    <fullName>Install_Date__c</fullName>
    <label>Install Date</label>
    <type>Date</type>
</CustomField>