force-app/main/default/objects/Case/fields/Order_Placed_Date__c.field-meta.xml
<CustomField>
    <fullName>Order_Placed_Date__c</fullName>
    <label>Order Placed Date</label>
    <type>Date</type>
</CustomField>