force-app/main/default/objects/Case/fields/Order_Review_Date__c.field-meta.xml
<CustomField>
    <fullName>Order_Review_Date__c</fullName>
    <label>Order Review Date</label>
    <type>Date</type>
</CustomField>