force-app/main/default/objects/Case/fields/Provisioning_Status__c.field-meta.xml
<CustomField>
    <fullName>Provisioning_Status__c</fullName>
    <description>This is the new provisioning status.</description>
    <label>Provisioning Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pre Provisioning</fullName>
            </value>
            <value>
                <fullName>Waiting to be placed</fullName>
            </value>
            <value>
                <fullName>Order placed</fullName>
            </value>
            <value>
                <fullName>Order Accepted</fullName>
            </value>
            <value>
                <fullName>Site Survey</fullName>
            </value>
            <value>
                <fullName>Planning</fullName>
            </value>
            <value>
                <fullName>Wayleave</fullName>
            </value>
            <value>
                <fullName>ECC&apos;s</fullName>
            </value>
            <value>
                <fullName>Planning Completed</fullName>
            </value>
            <value>
                <fullName>Customer Delay</fullName>
            </value>
            <value>
                <fullName>Supplier Delay</fullName>
            </value>
            <value>
                <fullName>Delivery - Works in progress</fullName>
            </value>
            <value>
                <fullName>Delivery - Installation</fullName>
            </value>
            <value>
                <fullName>Handover To Customer</fullName>
            </value>
            <value>
                <fullName>Billing Completed</fullName>
            </value>
            <value>
                <fullName>Cancellation</fullName>
            </value>
            <value>
                <fullName>On Hold - Waiting to be placed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>