force-app/main/default/objects/Case/fields/Supplier_Reference__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Reference__c</fullName>
    <label>Supplier Reference</label>
    <length>50</length>
    <type>Text</type>
</CustomField>