force-app/main/default/objects/Case/fields/Zendesk__Zendesk_Ticket_ID__c.field-meta.xml
<CustomField>
    <fullName>Zendesk__Zendesk_Ticket_ID__c</fullName>
    <label>Zendesk Ticket ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>