force-app/main/default/objects/Case/recordTypes/Giganet_Provisioning_Ticket.recordType-meta.xml
<RecordType>
    <fullName>Giganet_Provisioning_Ticket</fullName>
    <active>true</active>
    <businessProcess>Giganet Provisioning</businessProcess>
    <label>Giganet Provisioning Ticket</label>
</RecordType>