force-app/main/default/objects/Case/listViews/All_tickets.listView-meta.xml
<ListView>
    <fullName>All_tickets</fullName>
    <columns>Zendesk_Support_Ticket_ID__c</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>GN_Provisioning_Status__c</columns>
    <columns>NAME</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>Zendesk_Support_Ticket_Assignee_Name__c</columns>
    <columns>Zendesk_Support_Ticket_Updated_At__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.STATUS</field>
        <operation>notEqual</operation>
        <value>Solved,Closed</value>
    </filters>
    <filters>
        <field>CASES.SUBJECT</field>
        <operation>notContain</operation>
        <value>router request,router</value>
    </filters>
    <label>All tickets</label>
</ListView>