force-app/main/default/objects/Case/listViews/Relating_Cases_to_Opportunities.listView-meta.xml
<ListView>
    <fullName>Relating_Cases_to_Opportunities</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>GN_Provisioning_Status__c</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Opportunity__c</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>CASES.CREATED_DATE_DATE_ONLY</field>
        <operation>greaterOrEqual</operation>
        <value>1/1/2022 12:00 AM</value>
    </filters>
    <label>Relating Cases to Opportunities</label>
</ListView>